--- a/docker/tomcat/sakai/sakai.properties
+++ b/docker/tomcat/sakai/sakai.properties
@@ -55,8 +55,8 @@ msgcntr.forums.ranks.enable=true
 
 search.enable=true
 digest.enabled=false
-DEFAULT=https://d1setyl38b8kin.cloudfront.net
-serverUrl=https://d1setyl38b8kin.cloudfront.net
+DEFAULT=http://localhost:8080
+serverUrl=http://localhost:8080
 
 
 
