--- a/message/message-tool/tool/pom.xml
+++ b/message/message-tool/tool/pom.xml
@@ -47,6 +47,10 @@
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.velocity</groupId>
+            <artifactId>sakai-velocity-tool</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
