--- a/user/user-tool-prefs/tool/src/webapp/WEB-INF/web.xml
+++ b/user/user-tool-prefs/tool/src/webapp/WEB-INF/web.xml
@@ -26,6 +26,16 @@
       </param-value>
    </context-param>
 
+    <context-param>
+        <param-name>jakarta.faces.FACES_CONTEXT_FACTORY</param-name>
+        <param-value>org.glassfish.faces.FacesContextFactoryImpl</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>jakarta.faces.APPLICATION_FACTORY</param-name>
+        <param-value>org.glassfish.faces.ApplicationFactoryImpl</param-value>
+    </context-param>
+
 	<!-- Sakai request filter, mapped to anything that goes to the faces servlet -->
     <filter>
         <filter-name>sakai.request</filter-name>
@@ -73,7 +83,7 @@
     <!-- Faces Servlet -->
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
-        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+        <servlet-class>jakarta.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup> 2 </load-on-startup>
     </servlet>
 
