--- a/admin-tools/src/webapp/WEB-INF/web.xml
+++ b/admin-tools/src/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_9" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app id="WebApp_9" version="2.4"
+    xmlns="http://java.sun.com/xml/ns/j2ee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <display-name>Sakai Admin Tools</display-name>
     <description>These are the older velocity based admin tools.</description>
 
@@ -76,6 +76,13 @@
     <filter-mapping>
         <filter-name>sakai.request</filter-name>
         <servlet-name>sakai.memory</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+     <filter-mapping>
+        <filter-name>sakai.request</filter-name>
+        <servlet-name>sakai.dummy</servlet-name>
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
         <dispatcher>INCLUDE</dispatcher>
@@ -228,6 +235,25 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
+
+    <servlet>
+        <servlet-name>
+            sakai.dummy
+        </servlet-name>
+        <servlet-class>
+            org.sakaiproject.dummy.tool.DummyAction
+        </servlet-class>
+        <init-param>
+            <param-name>template</param-name>
+            <param-value>dummy/chef_dummy</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <!-- <servlet-mapping>
+    <servlet-name>sakai.dummy</servlet-name>
+    <url-pattern>/dummy-tool/*</url-pattern>
+</servlet-mapping> -->
 
     <servlet-mapping>
         <servlet-name>sakai.archive.downloader</servlet-name>
