--- a/signup/tool/src/webapp/WEB-INF/web.xml
+++ b/signup/tool/src/webapp/WEB-INF/web.xml
@@ -18,6 +18,16 @@
 		<param-value>false</param-value>
 	</context-param>
 
+	<context-param>
+		<param-name>jakarta.faces.FACES_CONTEXT_FACTORY</param-name>
+		<param-value>org.glassfish.faces.FacesContextFactoryImpl</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>jakarta.faces.APPLICATION_FACTORY</param-name>
+		<param-value>org.glassfish.faces.ApplicationFactoryImpl</param-value>
+	</context-param>
+
 	<listener>
 		<listener-class>
 			org.sakaiproject.util.ToolListener
@@ -77,7 +87,7 @@
 	<!-- Faces Servlet -->
 	<servlet>
 		<servlet-name>FacesServlet</servlet-name>
-		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+		<servlet-class>jakarta.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>2</load-on-startup>
 	</servlet>
 	<servlet-mapping>
