--- a/usermembership/tool/src/webapp/WEB-INF/web.xml
+++ b/usermembership/tool/src/webapp/WEB-INF/web.xml
@@ -15,13 +15,23 @@
             value is false.
         </description>
         <param-name>com.sun.faces.validateXml</param-name>
-        <param-value>false</param-value>
+        <param-value>true</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>jakarta.faces.FACES_CONTEXT_FACTORY</param-name>
+        <param-value>org.glassfish.faces.FacesContextFactoryImpl</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>jakarta.faces.APPLICATION_FACTORY</param-name>
+        <param-value>org.glassfish.faces.ApplicationFactoryImpl</param-value>
     </context-param>
 
     <!-- Faces Servlet -->
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
-        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+        <servlet-class>jakarta.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup> 2 </load-on-startup>
     </servlet>
 
