--- a/docker/tomcat/sakai/sakai.properties
+++ b/docker/tomcat/sakai/sakai.properties
@@ -61,20 +61,20 @@ serverUrl=http://localhost:8080
 
 
 ###   Email Configuration ####  start
-smtp.enabled=true
-smtp.port=587
-mail.support=reject@gmail.com
-smtp@org.sakaiproject.email.api.EmailService=smtp.gmail.com
-smtpPort@org.sakaiproject.email.api.EmailService=587
-smtpUseSSL@org.sakaiproject.email.api.EmailService=true
-# UserName to connect to SMTP server (Optional)
-smtpUser@org.sakaiproject.email.api.EmailService=haroon.devtek@gmail.com
-smtpDebug@org.sakaiproject.email.api.EmailService=true
+# smtp.enabled=true
+# smtp.port=587
+# mail.support=reject@gmail.com
+# smtp@org.sakaiproject.email.api.EmailService=smtp.gmail.com
+# smtpPort@org.sakaiproject.email.api.EmailService=587
+# smtpUseSSL@org.sakaiproject.email.api.EmailService=true
+# # UserName to connect to SMTP server (Optional)
+# smtpUser@org.sakaiproject.email.api.EmailService=haroon.devtek@gmail.com
+# smtpDebug@org.sakaiproject.email.api.EmailService=true
 
-# Password for connection to SMTP server (Optional)
-smtpPassword@org.sakaiproject.email.api.EmailService=ywidwsdzelfvtafk
-smtpFrom@org.sakaiproject.email.api.EmailService=haroon.devtek@gmail.com
-mail.sendfromsakai.maxsize=25000000
+# # Password for connection to SMTP server (Optional)
+# smtpPassword@org.sakaiproject.email.api.EmailService=ywidwsdzelfvtafk
+# smtpFrom@org.sakaiproject.email.api.EmailService=haroon.devtek@gmail.com
+# mail.sendfromsakai.maxsize=25000000
 
 ###   Email Configuration ####  END
 
