added custom user types value thorugh sakai prop config file

--- a/docker/tomcat/sakai/sakai.properties
+++ b/docker/tomcat/sakai/sakai.properties
@@ -82,3 +82,6 @@ mail.sendfromsakai.maxsize=25000000
 #### web services enable trying
 webservices.allowlogin=true
 webservices.allowlocal=true
+# Show only custom user types in User Creation dropdown
+user.type.selector=admin,principal,teacher,student,parent,teacherAssistant,platformAdmin
+
