--- a/docker/tomcat/sakai/sakai.properties
+++ b/docker/tomcat/sakai/sakai.properties
@@ -83,5 +83,4 @@ mail.sendfromsakai.maxsize=25000000
 webservices.allowlogin=true
 webservices.allowlocal=true
 # Show only custom user types in User Creation dropdown
-user.type.selector=admin,principal,teacher,student,parent,teacherAssistant,platformAdmin
-
+user.type.selector=Admin,Principal,Teacher,Student,Parent,Teacher Assistant
