--- a/docker/tomcat/sakai/sakai.properties
+++ b/docker/tomcat/sakai/sakai.properties
@@ -1,15 +1,15 @@
 ## MySQL settings - make sure to alter as appropriate
 vendor@org.sakaiproject.db.api.SqlService=mysql
-driverClassName@javax.sql.BaseDataSource=org.mariadb.jdbc.Driver
-url@javax.sql.BaseDataSource=jdbc:mariadb://sakai-mariadb:3306/sakai?useUnicode=true&characterEncoding=UTF-8
+driverClassName@javax.sql.BaseDataSource=org.mysql.jdbc.Driver
+url@javax.sql.BaseDataSource=jdbc:mysql://ls-45bb92ad5c6a725a339e86ec141dbd3f45f38d61.cj2msaygodo3.us-east-2.rds.amazonaws.com:3306/Database-1?useUnicode=true&characterEncoding=UTF-8
 
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 validationQuery@javax.sql.BaseDataSource=select 1 from DUAL
 defaultTransactionIsolationString@javax.sql.BaseDataSource=TRANSACTION_READ_COMMITTED
 # The username and password. 
 # Change to match your setup.
-username@javax.sql.BaseDataSource=sakai
-password@javax.sql.BaseDataSource=ironchef
+username@javax.sql.BaseDataSource=dbmasteruser
+password@javax.sql.BaseDataSource=dbmaster_123
 
 # Setup some variables for testing
 portal.error.showdetail=true
