--- a/docker/Dockerfile.source
+++ b/docker/Dockerfile.source
@@ -1,12 +1,12 @@
 FROM markhobson/maven-chrome:jdk-17 as build
 
-ARG release=master
+ARG release=master_build
 
 ENV MAVEN_OPTS="-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
 COPY maven/settings.xml /usr/share/maven/conf/settings.xml
 RUN mkdir /deploy
 WORKDIR /deploy
-RUN git clone --depth 1 https://github.com/sakaiproject/sakai.git
+RUN git clone --depth 1 https://github.com/DevTek-ai/sakai.git
 WORKDIR /deploy/sakai
 RUN git checkout ${release} && mvn clean install --no-transfer-progress -T 1C sakai:deploy-exploded -Dmaven.test.skip=true 
 RUN mvn clean && rm -rf /root/.m2/repository 
