--- a/docker/Dockerfile.source
+++ b/docker/Dockerfile.source
@@ -6,9 +6,9 @@ ENV MAVEN_OPTS="-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
 COPY maven/settings.xml /usr/share/maven/conf/settings.xml
 RUN mkdir /deploy
 WORKDIR /deploy
-RUN git clone https://github.com/sakaiproject/sakai.git
+RUN git clone --depth 1 https://github.com/DevTek-ai/sakai.git
 WORKDIR /deploy/sakai
-RUN git checkout master1 && mvn clean install --no-transfer-progress -T 1C sakai:deploy-exploded -Dmaven.test.skip=true 
+RUN git checkout ${release} && mvn clean install --no-transfer-progress -T 1C sakai:deploy-exploded -Dmaven.test.skip=true 
 RUN mvn clean && rm -rf /root/.m2/repository 
 
 FROM tomcat:9-jdk17-temurin
