--- a/docker/Dockerfile.source
+++ b/docker/Dockerfile.source
@@ -8,7 +8,7 @@ RUN mkdir /deploy
 WORKDIR /deploy
 RUN git clone https://github.com/DevTek-ai/sakai.git
 WORKDIR /deploy/sakai
-RUN git checkout ${release} && mvn clean install --no-transfer-progress -T 1C sakai:deploy-exploded -Dmaven.test.skip=true 
+RUN git checkout ${release} && mvn clean install --no-transfer-progress sakai:deploy-exploded -Dmaven.test.skip=true 
 RUN mvn clean && rm -rf /root/.m2/repository 
 
 FROM tomcat:9-jdk17-temurin
