--- a/docker/tomcat/sakai/sakai.properties
+++ b/docker/tomcat/sakai/sakai.properties
@@ -1,7 +1,7 @@
 ## MySQL settings - make sure to alter as appropriate
 vendor@org.sakaiproject.db.api.SqlService=mysql
 driverClassName@javax.sql.BaseDataSource=org.mysql.jdbc.Driver
-url@javax.sql.BaseDataSource=jdbc:mysql://ls-45bb92ad5c6a725a339e86ec141dbd3f45f38d61.cj2msaygodo3.us-east-2.rds.amazonaws.com:3306/Database-1?useUnicode=true&characterEncoding=UTF-8
+url@javax.sql.BaseDataSource=jdbc:mysql://ls-45bb92ad5c6a725a339e86ec141dbd3f45f38d61.cj2msaygodo3.us-east-2.rds.amazonaws.com:3306/sakai?useUnicode=true&characterEncoding=UTF-8
 
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 validationQuery@javax.sql.BaseDataSource=select 1 from DUAL
@@ -32,17 +32,7 @@ startSchedulerDelayMinutes@org.sakaiproject.api.app.scheduler.SchedulerManager=1
 
 iframe.allowed.macros=$USER_ID,$USER_EID,$USER_FIRST_NAME,$USER_LAST_NAME,$SITE_ID,$USER_ROLE,$SITE_PROP:term
 
-# Enable SMTP for testing
-smtp.enabled=true
 
-# dns addresses used by SMTP service for incoming email. (only supported on versions <= Sakai 10)
-smtp.dns.1=255.255.255.1
-smtp.dns.2=255.255.255.2
-
-# SMTP port on which incoming SMTP service listens.  
-# Recommend running on 8025, and using a standard mailer on 25 to forward mail to Sakai.
-# Default=25.
-smtp.port=8025
 
 # Show all preference pages
 preference.pages=prefs_noti_title, prefs_timezone_title, prefs_lang_title, prefs_privacy_title, prefs_hidden_title, prefs_editor_title   
@@ -61,3 +51,31 @@ msgcntr.forums.ranks.enable=true
 #force.url.secure=443
 
 search.enable=true
+digest.enabled=false
+DEFAULT=https://d1setyl38b8kin.cloudfront.net
+serverUrl=https://d1setyl38b8kin.cloudfront.net
+
+
+
+###   Email Configuration ####  start
+smtp.enabled=false
+smtp.port=587
+mail.support=haroon.devtek@gmail.com
+smtp@org.sakaiproject.email.api.EmailService=smtp.gmail.com
+smtpPort@org.sakaiproject.email.api.EmailService=587
+smtpUseSSL@org.sakaiproject.email.api.EmailService=false
+smtpUseTLS@org.sakaiproject.email.api.EmailService=true
+# UserName to connect to SMTP server (Optional)
+smtpUser@org.sakaiproject.email.api.EmailService=haroon.devtek@gmail.com
+smtpDebug@org.sakaiproject.email.api.EmailService=true
+
+# Password for connection to SMTP server (Optional)
+smtpPassword@org.sakaiproject.email.api.EmailService=ywidwsdzelfvtafk
+smtpFrom@org.sakaiproject.email.api.EmailService=haroon.devtek@gmail.com
+mail.sendfromsakai.maxsize=25000000
+###   Email Configuration ####  END
+
+
+#### web services enable trying
+webservices.allowlogin=true
+webservices.allowlocal=true
