--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -8,8 +8,8 @@ java.nosites = No site(s) checked. Please check a site or sites.
 java.please = Please select only one site for editing.
 java.theemail = The Email id must be made up of alpha numeric characters or any of !#$&'*+-=?^_`{|}~. (no spaces).
 java.sites ={0} Sites
-java.new = Create New Site
-java.siteList = Site List
+java.new = New School
+java.siteList = Schools List
 java.newgroup = Add
 java.revise = Edit Selected
 java.delete = Delete Selected
@@ -143,9 +143,9 @@ java.import.existing=A previous site import request is still processing for this
 
 
 
-
-
-
+# School VM
+school.title = School
+school.list = These are the Schools defined within the system that meet the search criteria. Click on an id to edit
 
 
 java.rolenotfound = Could not find the template realm to add the role from.
@@ -234,7 +234,7 @@ list.summary = List of sites you have access to.
 list.sortbytitle = Sort by title
 list.sortbyid=Sort by id
 list.id=Site ID
-list.worksite = Worksite Title
+list.worksite = School Name
 list.stasc = Sort by title ascending
 list.stdesc = Sort by title descending
 list.sortbytype = Sort by type
@@ -259,10 +259,10 @@ list.unpub = Unpublished
 list.nosites = No sites were found
 list.thatmatch = that match your search for
 list.owner = Owner
-list.creator = Creator
-list.term = Term
-list.type = Type
-list.status = Status
+list.creator = State
+list.term = Teachers
+list.type = Active
+list.status = Students
 list.creationdate = Creation Date
 list.moreinfo=(i)
 list.moreinfotooltip=More information on this site
@@ -603,7 +603,7 @@ sitegen.siteinfolist.sortroleas = Sort by role ascending
 sitegen.siteinfolist.sortroledes = Sort by role descending
 sitegen.siteinfolist.role = Role
 sitegen.siteinfolist.role.select = Select role for
-sitegen.siteinfolist.status = Status
+sitegen.siteinfolist.status = Active
 sitegen.siteinfolist.status.select = Select status for
 sitegen.siteinfolist.remove = Remove
 sitegen.siteinfolist.active = Active
