--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -19,6 +19,7 @@ java.couldntdel = {0} could not be deleted, because you do not have permission.
 java.yourwork = Your Workspace may not be deleted with this tool.
 java.click = Click Cancel to return to your site list.
 java.editsite = Edit Site Information
+java.editschoolsite = Edit School Information
 java.edittools = Manage Tools
 java.orderpages = Tool Order
 java.datemanager = Date Manager
@@ -407,6 +408,23 @@ feat.removeHeading=Remove
 feat.notAvail=Please use the Site Import page in Site Info to import content from existing sites once this site has been created.
 
 #SiteInfo VM
+school.edit.header = Edit School
+school.edit.subtext = Review and modify this School's information.
+school.name = School Name
+school.address = Address
+school.city = City
+school.state = State
+school.zip = Zip Code
+school.status = Status
+school.status.active = Active
+school.status.inactive = Inactive
+school.admins = Administrators
+school.description = Description
+school.continue = Continue
+school.cancel = Cancel
+
+
+
 sinfo.other = Site Information
 sinfo.youare = You are setting up a course site for the following roster(s):
 sinfo.rosterlist.summary=List of rosters associated with this site. Each row contains roster name and a link to remove it.
