--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -416,12 +416,8 @@ school.city = City
 school.state = State
 school.zip = Zip Code
 school.status = Status
-school.status.active = Active
-school.status.inactive = Inactive
-school.admins = Administrators
-school.description = Description
-school.continue = Continue
-school.cancel = Cancel
+school.info = School Information
+school.edit = Edit School Information
 
 
 
@@ -488,6 +484,7 @@ sitediinf.sitconema = Site Contact Email
 sitediinf.sitconnam = Site Contact Name
 alert.sitediinf.sitconnam = Please enter site contact name.
 sitediinf.sittit    = Site Title
+schooldiinf.sittit    = School Title
 sitediinf.term      = Term
 sitediinf.addurl  = Add Site URL
 sitediinf.editurl  = Site URL
