--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -8,8 +8,8 @@ java.nosites = No site(s) checked. Please check a site or sites.
 java.please = Please select only one site for editing.
 java.theemail = The Email id must be made up of alpha numeric characters or any of !#$&'*+-=?^_`{|}~. (no spaces).
 java.sites ={0} Sites
-java.new = Create New Site
-java.siteList = Site List
+java.new = New School
+java.siteList = Schools List
 java.newgroup = Add
 java.revise = Edit Selected
 java.delete = Delete Selected
@@ -19,6 +19,7 @@ java.couldntdel = {0} could not be deleted, because you do not have permission.
 java.yourwork = Your Workspace may not be deleted with this tool.
 java.click = Click Cancel to return to your site list.
 java.editsite = Edit Site Information
+java.editschoolsite = Edit School Information
 java.edittools = Manage Tools
 java.orderpages = Tool Order
 java.datemanager = Date Manager
@@ -142,7 +143,9 @@ java.roletype = Please choose the role type.
 java.import.existing=A previous site import request is still processing for this site.  Please allow this process to finish before sending a new site import request.
 
 
-
+# School VM
+school.title = School
+school.list = These are the Schools defined within the system that meet the search criteria. Click on an id to edit
 
 
 
@@ -234,7 +237,7 @@ list.summary = List of sites you have access to.
 list.sortbytitle = Sort by title
 list.sortbyid=Sort by id
 list.id=Site ID
-list.worksite = Worksite Title
+list.worksite = School Name
 list.stasc = Sort by title ascending
 list.stdesc = Sort by title descending
 list.sortbytype = Sort by type
@@ -259,10 +262,10 @@ list.unpub = Unpublished
 list.nosites = No sites were found
 list.thatmatch = that match your search for
 list.owner = Owner
-list.creator = Creator
-list.term = Term
-list.type = Type
-list.status = Status
+list.creator = State
+list.term = Teachers
+list.type = Active
+list.status = Students
 list.creationdate = Creation Date
 list.moreinfo=(i)
 list.moreinfotooltip=More information on this site
@@ -407,6 +410,18 @@ feat.removeHeading=Remove
 feat.notAvail=Please use the Site Import page in Site Info to import content from existing sites once this site has been created.
 
 #SiteInfo VM
+school.edit.header = Edit School
+school.edit.subtext = Review and modify this School's information.
+school.name = School Name
+school.address = Address
+school.city = City
+school.state = State
+school.zip = Zip Code
+school.status = Status
+school.info = School Information
+school.edit = Edit School Information
+
+
 sinfo.other = Site Information
 sinfo.youare = You are setting up a course site for the following roster(s):
 sinfo.rosterlist.summary=List of rosters associated with this site. Each row contains roster name and a link to remove it.
@@ -470,6 +485,7 @@ sitediinf.sitconema = Site Contact Email
 sitediinf.sitconnam = Site Contact Name
 alert.sitediinf.sitconnam = Please enter site contact name.
 sitediinf.sittit    = Site Title
+schooldiinf.sittit = School Title
 sitediinf.term      = Term
 sitediinf.addurl  = Add Site URL
 sitediinf.editurl  = Site URL
@@ -603,7 +619,7 @@ sitegen.siteinfolist.sortroleas = Sort by role ascending
 sitegen.siteinfolist.sortroledes = Sort by role descending
 sitegen.siteinfolist.role = Role
 sitegen.siteinfolist.role.select = Select role for
-sitegen.siteinfolist.status = Status
+sitegen.siteinfolist.status = Active
 sitegen.siteinfolist.status.select = Select status for
 sitegen.siteinfolist.remove = Remove
 sitegen.siteinfolist.active = Active
