--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -8,8 +8,8 @@ java.nosites = No site(s) checked. Please check a site or sites.
 java.please = Please select only one site for editing.
 java.theemail = The Email id must be made up of alpha numeric characters or any of !#$&'*+-=?^_`{|}~. (no spaces).
 java.sites ={0} Sites
-java.new = Create New Site
-java.siteList = Site List
+java.new = Create New Department
+java.siteList = Departments List
 java.newgroup = Add
 java.revise = Edit Selected
 java.delete = Delete Selected
@@ -266,6 +266,10 @@ list.status = Status
 list.creationdate = Creation Date
 list.moreinfo=(i)
 list.moreinfotooltip=More information on this site
+
+
+#Departments 
+department.title = Departments
 
 #Participants Vm
 
