--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -419,6 +419,7 @@ school.state = State
 school.zip = Zip Code
 school.status = Status
 school.info = School Information
+school.add = Add School Information
 school.edit = Edit School Information
 
 
@@ -440,7 +441,7 @@ sinfo.scontact = Site Contact Name
 sinfo.scontact2 = Site Contact Email
 sinfo.list.desc.ellipse=...
 sinfo.list.desc.more=(More)
-sinfo.language = Site Language
+sinfo.language = Language
 sinfo.language.defaultUserLanguage = User Language (default)
 
 sitedicla.alert  = Alert:
@@ -476,8 +477,8 @@ sitediinf.app       = Appearance (Theme)
 sitediinf.can       = Cancel
 sitediinf.con       = Continue
 sitediinf.des       = Description
-sitediinf.dis       = (displayed on the site's home page)
-sitediinf.dis2      = (displayed in publicly viewable list of sites. Max 80 characters)
+sitediinf.dis       = (displayed on the courses's home page)
+sitediinf.dis2      = (displayed in publicly viewable list of courses. Max 80 characters)
 sitediinf.ico       = Icon URL
 sitediinf.shodes    = Short Description
 sitediinf.sit       = Site will display this theme.
