--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -8,8 +8,10 @@ java.nosites = No site(s) checked. Please check a site or sites.
 java.please = Please select only one site for editing.
 java.theemail = The Email id must be made up of alpha numeric characters or any of !#$&'*+-=?^_`{|}~. (no spaces).
 java.sites ={0} Sites
-java.new = New School
-java.siteList = Schools List
+java.new = Create New Site
+java.siteList = Site List
+java.newSchool = New School
+java.schoolList = Schools List
 java.newgroup = Add
 java.revise = Edit Selected
 java.delete = Delete Selected
@@ -421,6 +423,9 @@ school.status = Status
 school.info = School Information
 school.add = Add School Information
 school.edit = Edit School Information
+schooldiinf.sittit = School Title
+schooldiinf.dis       = (displayed on the school's home page)
+schooldiinf.dis2      = (displayed in publicly viewable list of school. Max 80 characters)
 
 
 sinfo.other = Site Information
@@ -486,10 +491,10 @@ sitediinf.sitconema = Site Contact Email
 sitediinf.sitconnam = Site Contact Name
 alert.sitediinf.sitconnam = Please enter site contact name.
 sitediinf.sittit    = Site Title
-schooldiinf.sittit = School Title
 sitediinf.term      = Term
 sitediinf.addurl  = Add Site URL
 sitediinf.editurl  = Site URL
+
 
 sitetype.acater    = Academic term:
 sitetype.alert     = Alert:
