--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -8,8 +8,10 @@ java.nosites = No site(s) checked. Please check a site or sites.
 java.please = Please select only one site for editing.
 java.theemail = The Email id must be made up of alpha numeric characters or any of !#$&'*+-=?^_`{|}~. (no spaces).
 java.sites ={0} Sites
-java.new = New School
-java.siteList = Schools List
+java.new = Create New Site
+java.siteList = Site List
+java.newSchool = New School
+java.schoolList = Schools List
 java.newgroup = Add
 java.revise = Edit Selected
 java.delete = Delete Selected
@@ -146,7 +148,8 @@ java.import.existing=A previous site import request is still processing for this
 # School VM
 school.title = School
 school.list = These are the Schools defined within the system that meet the search criteria. Click on an id to edit
-
+schooldiinf.dis       = (displayed on the school's home page)
+schooldiinf.dis2      = (displayed in publicly viewable list of school. Max 80 characters)
 
 
 
@@ -237,7 +240,8 @@ list.summary = List of sites you have access to.
 list.sortbytitle = Sort by title
 list.sortbyid=Sort by id
 list.id=Site ID
-list.worksite = School Name
+list.worksite = Worksite Title
+list.schoolsite = School Name
 list.stasc = Sort by title ascending
 list.stdesc = Sort by title descending
 list.sortbytype = Sort by type
@@ -262,10 +266,14 @@ list.unpub = Unpublished
 list.nosites = No sites were found
 list.thatmatch = that match your search for
 list.owner = Owner
-list.creator = State
-list.term = Teachers
-list.type = Active
-list.status = Students
+list.creator = Creator
+list.term = Term
+list.type = Type
+list.status = Status
+list.SchoolState = State
+list.Schoolteacher = Teachers
+list.SchoolStatus = Active
+list.SchoolStudents = Students
 list.creationdate = Creation Date
 list.moreinfo=(i)
 list.moreinfotooltip=More information on this site
