school edit chnages

--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -428,7 +428,7 @@ school.zip = Zip Code
 school.status = Status
 school.info = School Information
 school.edit = Edit School Information
-
+school.add = Add School Information
 
 sinfo.other = Site Information
 sinfo.youare = You are setting up a course site for the following roster(s):
