--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -448,7 +448,7 @@ sinfo.scontact = Site Contact Name
 sinfo.scontact2 = Site Contact Email
 sinfo.list.desc.ellipse=...
 sinfo.list.desc.more=(More)
-sinfo.language = Site Language
+sinfo.language = Language
 sinfo.language.defaultUserLanguage = User Language (default)
 
 sitedicla.alert  = Alert:
