--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -10,8 +10,10 @@ java.theemail = The Email id must be made up of alpha numeric characters or any 
 java.sites ={0} Sites
 java.new = Create New Site
 java.siteList = Site List
-java.newSchool = New School
+java.newSchool =Create New School
 java.schoolList = Schools List
+java.newDept = Create New Department
+java.deptList = Departments List
 java.newgroup = Add
 java.revise = Edit Selected
 java.delete = Delete Selected
@@ -277,6 +279,10 @@ list.SchoolStudents = Students
 list.creationdate = Creation Date
 list.moreinfo=(i)
 list.moreinfotooltip=More information on this site
+
+
+#Departments 
+department.title = Departments
 
 #Participants Vm
 
