--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -436,6 +436,12 @@ school.info = School Information
 school.edit = Edit School Information
 school.add = Add School Information
 
+
+#Department VM
+dept.info = Department Information
+dept.add = Add Department
+dept.edit = Edit Department
+
 sinfo.other = Site Information
 sinfo.youare = You are setting up a course site for the following roster(s):
 sinfo.rosterlist.summary=List of rosters associated with this site. Each row contains roster name and a link to remove it.
