--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -212,10 +212,10 @@ chrolc.finish = The following roles will be assigned when you click the Finish b
 
 #type-confirm Vm
 site.creating = Creating a site...
-site.sname = Site name
+site.sname = name
 site.descr = Description
 site.short = Short Description
-site.create = Create Site
+site.create = Create
 
 #Import Vm
 import.reuse = Re-use Material from Other Sites
@@ -302,9 +302,9 @@ multipleTools.more = more
 multipleTools.remove = Remove This Tool Instance
 
 #NewSiteConfirm VM
-newsc.project.confirm = Confirm Your Project Site Setup
+newsc.project.confirm = Confirm Your Setup
 newsc.course.confirm = Confirm Your Course Site Setup
-newsc.other.confirm = Confirm Your Site Setup
+newsc.other.confirm = Confirm Your Setup
 newsc.selection = Confirm your site setup selections...
 newsc.list.summary = Summary list of site settings.
 newsc.please = Please review the following information about your site.
@@ -312,8 +312,8 @@ newsc.ifthis = If this information is correct, click Request Site.
 newsc.ifthis2 = If this information is correct, click Create Site.
 newsc.ifyou = If you need to make changes, click the Back button at the bottom of the page. To make changes to this setup later, go to Site Info within your site.
 newsc.youare = You are setting up a class site that includes the following class/sections:
-newsc.site = Site Title
-newsc.url = Site URL
+newsc.site = Title
+newsc.url = URL
 newsc.url.none = No URL provided
 newsc.descr = Description
 newsc.descr.none=No description provided.
@@ -387,11 +387,11 @@ man.enter2 = Enter the class information for your site. A
 man.means = means the information is required.
 man.addmore = Add More Roster(s)?
 man.addmore.label =To operate the combo box, first press Alt+Down Arrow to open it, and then use the up and down arrow keys to scroll through the options.
-man.siteauth = Authorization to Allow Roster(s) Site Access
+man.siteauth = Authorization to Allow Roster(s) Access
 man.siteroster = Class Roster(s)
 man.notverify = At this time we cannot verify you are the instructor of record, please enter the username of a person that can verify you can create this site (e.g. department head, previous semester instructor).  An email requesting authorization will be sent to this person. If there are multiple instructors for the course, please separate the usernames with comma signs.
 man.notverifyfuture1 = The official roster for your class will be available
-man.notverifyfuture2 =  weeks prior to the start of the term. At that point, you may give students access to the site by going into the Site Info tool, selecting "Edit Class Roster(s)" and following the setup wizard.
+man.notverifyfuture2 =  weeks prior to the start of the term. At that point, you may give students access to the site by going into the Info tool, selecting "Edit Class Roster(s)" and following the setup wizard.
 man.authoriz = Authorizer's username:
 man.email = Email will be sent asking for authorization for you to create this site.
 man.spec = Special Instructions:
@@ -400,7 +400,7 @@ man.remove = Remove
 
 #Features Vm
 feat.tools = Tools
-feat.other.tools=Site Tools
+feat.other.tools=Tools
 feat.tools.list.summary = Table listing features for your site. Column 1: checkbox to select. Column 2: feature name. Column 3: feature description.
 feat.forv = For providing an overview of the site, including the site's description and recent announcements, messages, and events
 feat.reuse = Re-use Material from Other Sites You Own
@@ -442,22 +442,22 @@ dept.info = Department Information
 dept.add = Add Department
 dept.edit = Edit Department
 
-sinfo.other = Site Information
+sinfo.other = Information
 sinfo.youare = You are setting up a course site for the following roster(s):
 sinfo.rosterlist.summary=List of rosters associated with this site. Each row contains roster name and a link to remove it.
 sinfo.requestedSections = You have requested approval to add the following roster(s):
 sinfo.removeSections=Remove
 sinfo.simplea = A
 sinfo.means = means required information.
-sinfo.stitle = Site Title
-sinfo.url = Site URL
+sinfo.stitle = Title
+sinfo.url = URL
 sinfo.descr = Description
 sinfo.display = (displayed on the site's homepage)
 sinfo.short = Short Description
 sinfo.display2 = (displayed in public list of sites. Max 80 characters)
 sinfo.appear = Appearance (Icon)
-sinfo.scontact = Site Contact Name
-sinfo.scontact2 = Site Contact Email
+sinfo.scontact = Contact Name
+sinfo.scontact2 = Contact Email
 sinfo.list.desc.ellipse=...
 sinfo.list.desc.more=(More)
 sinfo.language = Language
@@ -486,8 +486,8 @@ sitediconf.shodes     = Short Description
 sitediconf.sitconnam  = Site Contact Name
 sitediconf.sitico     = Site Icon URL
 sitediconf.siticonema = Site Contact Email
-sitediconf.sittit     = Site Title
-sitediconf.siteurls   = Site URLs
+sitediconf.sittit     = Title
+sitediconf.siteurls   = URLs
 
 sitediconf.language = Site Language
 
@@ -504,11 +504,11 @@ sitediinf.sit       = Site will display this theme.
 sitediinf.sitconema = Site Contact Email
 sitediinf.sitconnam = Site Contact Name
 alert.sitediinf.sitconnam = Please enter site contact name.
-sitediinf.sittit    = Site Title
+sitediinf.sittit    = Title
 schooldiinf.sittit = School Title
 sitediinf.term      = Term
-sitediinf.addurl  = Add Site URL
-sitediinf.editurl  = Site URL
+sitediinf.addurl  = Add URL
+sitediinf.editurl  = URL
 
 sitetype.acater    = Academic term:
 sitetype.alert     = Alert:
@@ -584,9 +584,9 @@ sitegen.siteinfolist.previous1 = Previous
 sitegen.siteinfolist.return = Return to Sites List
 sitegen.siteinfolist.next = Next:
 sitegen.siteinfolist.next1 = Next
-sitegen.siteinfolist.title = Site Title
-sitegen.siteinfolist.summary = Site Information
-sitegen.siteinfolist.sitedes = Site Description
+sitegen.siteinfolist.title = Title
+sitegen.siteinfolist.summary = Information
+sitegen.siteinfolist.sitedes = Description
 sitegen.siteinfolist.courses = Roster(s) with site access
 sitegen.siteinfolist.term = Term
 sitegen.siteinfolist.sitecont = Site contact and email
@@ -649,7 +649,7 @@ sitegen.siteinfolist.cancel = Cancel
 sitegen.siteinfolist.roledes = Role Descriptions
 sitegen.siteinfolist.nomaintainuser = The site has to have at least one user with role
 sitegen.siteinfolist.lastmaintainuseractive = Cannot remove or inactivate the last user with the role ''{0}''
-sitegen.siteinfolist.siteurl= Site URL
+sitegen.siteinfolist.siteurl= URL
 sitegen.siteinfolist.close=Close (or Esc)
 sitegen.siteinfolist.nosd=No short description provided
 sitegen.siteinfolist.nold=No long description provided
@@ -741,7 +741,7 @@ ediacc.gloacc1	    = Global access settings allow you to decide who has access t
 ediacc.gloacc2	 	= You can change these settings later by going to Site Info.
 ediacc.notallow		= (You are not allowed to make changes to this site.)
 ediacc.rolforpep    = Role for people that join site:
-ediacc.other.setsitacc    = Site Access
+ediacc.other.setsitacc    = Access
 ediacc.sitsta       = Site Status
 ediacc.upd          = Update
 ediacc.yousitcan    = In addition to the participants you've added, you can open your site so that anyone with a valid login can join it.
@@ -804,8 +804,8 @@ sitdup.dupaclacourse	= Duplicating a course site will create a new course site w
 sitdup.dupaclanoncourse	= Duplicating a site will create a new site with content that owners/administrators created, but for privacy reasons will not copy items added to the site by general users.
 sitdup.dupsit2   = Duplicated site
 sitdup.hasbeedup = has been created.
-sitdup.sitti    = Site Title
-sitdup.newsitid = Site ID
+sitdup.sitti    = Title
+sitdup.newsitid = ID
 sitdup.newsitid.instructions=Recommended site id format: all lowercase with no spaces or special characters.
 sitdup.idused   = The ID is being used by an existing site, please input a different ID or leave the field empty to allow the system to generate a new random ID
 sitdup.duptit   = Retain Resources file storage quota?
