properties file update

--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -305,7 +305,7 @@ multipleTools.remove = Remove This Tool Instance
 newsc.project.confirm = Confirm Your Setup
 newsc.course.confirm = Confirm Your Course Site Setup
 newsc.other.confirm = Confirm Your Setup
-newsc.selection = Confirm your site setup selections...
+newsc.selection = Confirm your setup selections...
 newsc.list.summary = Summary list of site settings.
 newsc.please = Please review the following information about your site.
 newsc.ifthis = If this information is correct, click Request Site.
@@ -330,11 +330,11 @@ newsc.no = No
 newsc.appear = Appearance (Icon)
 newsc.icon = Icon URL
 newsc.icon.none = No icon provided
-newsc.sitecont = Site Contact Name
-newsc.sitecont2 = Site Contact Email
+newsc.sitecont = Contact Name
+newsc.sitecont2 = Contact Email
 newsc.sitecont2.none=No contact email provided
 newsc.reqsite = Request Site
-newsc.crsite = Create Site
+newsc.crsite = Create 
 newsc.joinable = Joinable:
 newsc.auth = Logged in users and site participants
 newsc.anon = Anyone (including non-logged in users) and site participants
@@ -483,13 +483,13 @@ sitediconf.des        = Description
 sitediconf.fin        = Finish
 sitediconf.none				= None provided
 sitediconf.shodes     = Short Description
-sitediconf.sitconnam  = Site Contact Name
+sitediconf.sitconnam  = Contact Name
 sitediconf.sitico     = Site Icon URL
-sitediconf.siticonema = Site Contact Email
+sitediconf.siticonema = Contact Email
 sitediconf.sittit     = Title
 sitediconf.siteurls   = URLs
 
-sitediconf.language = Site Language
+sitediconf.language = Language
 
 sitediinf.alert     = Alert:
 sitediinf.app       = Appearance (Theme)
@@ -501,8 +501,8 @@ sitediinf.dis2      = (displayed in publicly viewable list of sites. Max 80 char
 sitediinf.ico       = Icon URL
 sitediinf.shodes    = Short Description
 sitediinf.sit       = Site will display this theme.
-sitediinf.sitconema = Site Contact Email
-sitediinf.sitconnam = Site Contact Name
+sitediinf.sitconema = Contact Email
+sitediinf.sitconnam = Contact Name
 alert.sitediinf.sitconnam = Please enter site contact name.
 sitediinf.sittit    = Title
 schooldiinf.sittit = School Title
@@ -700,7 +700,7 @@ ediacc.bac          = Back
 ediacc.can          = Cancel
 ediacc.cannotbejoi	= Limit to official course members or to those I add manually (recommended)
 ediacc.canbejoi     = Allow any {0} user to join the site
-ediacc.vis			= Site Visibility
+ediacc.vis			= Visibility
 ediacc.vis.instr	= Your site can be listed in the Site Browser on the Gateway, allowing non-participants to find it and access its public resources.
 ediacc.con          = Continue
 ediacc.dismysit     = Display in Site Browser
@@ -714,7 +714,7 @@ ediacc.pri          = Do not display in Site Browser
 ediacc.pubsit       = <strong>Published</strong> - immediately available to all site participants
 ediacc.unpubsit	    = <strong>Unpublished</strong> - accessible only to site maintainers
 ediacc.status       = Site Status
-ediacc.availability = Site Availability
+ediacc.availability = Availability
 ediacc.currently    = Your site is currently set to: 
 ediacc.pubyousit    = A site must be published in order for students to see it. You may choose whether to have your site published automatically or at a specific date/time, or you can manually change the status using the options below. Instructors will always have access to the site, whether it's published, scheduled, or unpublished.
 ediacc.autotype     = Automatic
