--- a/user/user-tool-prefs/tool/src/bundle/user-tool-prefs.properties
+++ b/user/user-tool-prefs/tool/src/bundle/user-tool-prefs.properties
@@ -129,8 +129,8 @@ editor_full=Force full/desktop mode (Full set of buttons, all features)
 
 ## SAK-23895:Display full name of course, not just code, in site tab
 tabDisplay_prompt=Show tabs as:
-tabDisplay_coursecode=Site Title
-tabDisplay_coursename=Site Short Description
+tabDisplay_coursecode= Title
+tabDisplay_coursename= Short Description
 
 # EntityProvider properties
 userPrefs=User Preference Values
