--- a/admin-tools/src/bundle/users.properties
+++ b/admin-tools/src/bundle/users.properties
@@ -62,6 +62,11 @@ usecre.pass       = Please enter the password the same in both fields.
 usecre.curpass    = Please enter your current password to make changes to your account.
 usecre.pasismis   = Please enter a password.
 usecre.eidmis     = Please enter a user id.
+usecre.firstmis     = Please enter first name.
+usecre.lastmis     = Please enter last name.
+usecre.emailmis     = Please enter email.
+usecre.pwmis     = Please enter new password.
+usecre.pwConfirmmis     = Please confirm new password.
 
 useedi.can        = Cancel Changes
 useedi.pass       = Passwords Must Match
