--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -421,7 +421,7 @@ feat.remove.alert.yes = Yes
 feat.remove.alert.no = No
 feat.removeHeading=Remove
 
-feat.notAvail=Please use the Site Import page in Site Info to import content from existing sites once this site has been created.
+feat.notAvail=Please use the Import page in Info to bring in content from existing ones once this has been created
 
 #SiteInfo VM
 school.edit.header = Edit School
@@ -505,7 +505,7 @@ sitediinf.sitconema = Contact Email
 sitediinf.sitconnam = Contact Name
 alert.sitediinf.sitconnam = Please enter site contact name.
 sitediinf.sittit    = Title
-schooldiinf.sittit = School Title
+schooldiinf.sittit = Name
 sitediinf.term      = Term
 sitediinf.addurl  = Add URL
 sitediinf.editurl  = URL
@@ -716,7 +716,7 @@ ediacc.unpubsit	    = <strong>Unpublished</strong> - accessible only to site mai
 ediacc.status       = Site Status
 ediacc.availability = Availability
 ediacc.currently    = Your site is currently set to: 
-ediacc.pubyousit    = A site must be published in order for students to see it. You may choose whether to have your site published automatically or at a specific date/time, or you can manually change the status using the options below. Instructors will always have access to the site, whether it's published, scheduled, or unpublished.
+ediacc.pubyousit    =  The content must be published for it to be visible to others. You can choose to publish automatically, at a specific date and time, or manually change the visibility status using the options below. Full access remains available to authorized users, regardless of whether the content is published, scheduled, or unpublished.
 ediacc.autotype     = Automatic
 ediacc.automaticstart = Automatically publish and unpublish my site at the start of the term, 
 ediacc.automaticafter = and {0} days after the end of the term.
