department admin validation check

--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -119,6 +119,7 @@ java.changeroles = You do not have permission to change roles.
 java.joinsite = Please select a role for user to join the site.
 java.reqfields = Please enter the required fields.
 java.specify = Please specify title.
+java.specify.admin = Please specify department admin.
 java.pleasechoice = Please select the notification choice.
 java.siteinval =  id is invalid.
 java.sitebeenused =  id has been used.
